# real-time-object-detection-api

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEVELOPMENT.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
api/: .dockerignore  Dockerfile  README.md  config.py  detector_service.py  main.py  models.py  requirements.txt
scripts/: download_model.sh
tests/: conftest.py  test_api.py  test_detector_service.py  test_e2e.py
ui/: .dockerignore  Dockerfile  README.md  app.py  requirements.txt
